--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,13 +13,13 @@
 	        android:id="@+id/surfaceView1"
 	        android:layout_width="fill_parent"
 	        android:layout_height="fill_parent" />
-    
+
+	    <ImageView
+	        android:id="@+id/imageView1"
+	        android:layout_width="77dp"
+	        android:layout_height="59dp"
+	        android:src="@drawable/snaplogo" />
         
   </FrameLayout>
 
-        <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/snaplogo" />
 </LinearLayout>
