--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 	<item android:id="@+id/blackout" android:title="Blackout"/>
+	<item android:id="@+id/reupload" android:title="ReUpload"/>
 </menu>
